--- a/demo.html
+++ b/demo.html
@@ -173,7 +173,7 @@
 
     <script type="module">
         import './tpen-line-history.js'
-        import TPEN from 'http://app.t-pen.org/api/TPEN.js'
+        import TPEN from 'https://app.t-pen.org/api/TPEN.js'
 
         // Fetch real annotation data from the RERUM annotation page
         async function loadAnnotationData() {
